more too small text fixes

--- a/components/automate-ui/src/app/page-components/delta-viewer/delta-viewer.component.scss
+++ b/components/automate-ui/src/app/page-components/delta-viewer/delta-viewer.component.scss
@@ -17,7 +17,7 @@
   }
 
   .d2h-tag {
-    font-size: 9px;
+    font-size: 11px;
   }
 
   .d2h-diff-table {
